[gd_scene load_steps=4 format=1]

[ext_resource path="res://assets/fonts/04B10.fnt" type="BitmapFont" id=1]
[ext_resource path="res://core/HUD/MFD/screens/mfd_screen_docking.gd" type="Script" id=2]

[sub_resource type="Theme" id=1]

default_font = ExtResource( 1 )

[node name="Display" type="PanelContainer"]

visibility/blend_mode = 2
anchor/right = 1
anchor/bottom = 1
rect/min_size = Vector2( 180, 180 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = SubResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 1420.0
margin/bottom = 720.0
script/script = ExtResource( 2 )

[node name="box" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = 7.0
margin/right = 173.0
margin/bottom = 173.0
alignment = 0

[node name="Title" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 166.0
margin/bottom = 9.0
text = "DOCKING"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator" type="HSeparator" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 13.0
margin/right = 166.0
margin/bottom = 16.0

[node name="own_dock" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 20.0
margin/right = 166.0
margin/bottom = 29.0
text = "O: <dock>"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="target" type="HBoxContainer" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 33.0
margin/right = 166.0
margin/bottom = 42.0
alignment = 0

[node name="vessel" type="Label" parent="box/target"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 81.0
margin/bottom = 9.0
text = "T: <station>"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dock" type="Label" parent="box/target"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 0
margin/left = 85.0
margin/top = 0.0
margin/right = 166.0
margin/bottom = 9.0
text = "D: <dock>"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="HSeparator1" type="HSeparator" parent="box"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 46.0
margin/right = 166.0
margin/bottom = 49.0

[node name="dev_ang" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 53.0
margin/right = 166.0
margin/bottom = 62.0
text = "DevA: <999>"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="dev_pos" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 66.0
margin/right = 166.0
margin/bottom = 75.0
text = "DevP: <999>"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="distance" type="Label" parent="box"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 79.0
margin/right = 166.0
margin/bottom = 88.0
text = "Dist.: <999>"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


